--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,8 +1,8 @@
-<header>
+<header class="justify-content-center">
     <h1>{{title}}</h1>
-    <nav>
-        <a href="/">Weather</a></li>
-        <a href="/about">About</a></li>
-        <a href="/help">Help</a></li>
+    <nav class="justify-content-center nav nav-tabs col-sm-12">
+        <a href="/" class="nav-item nav-link">Weather</a>
+        <a href="/about" class="nav-item nav-link">About</a>
+        <a href="/help" class="nav-item nav-link">Help</a>
     </nav>
 </header>
