--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="icon" href="/images/weather.png">
     <title>Help</title>
 </head>
 <body>
-    <div class="main-content">
-        {{>header}}
+    <div class="main-content container col-sm-12 col-lg-8">
+        <div class="card">
+            <div class="card-header">
+            {{>header}}
         <p>{{content}}</p>
+        </div>
+        </div>
     </div>
     {{>footer}}
 </body>
