--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,9 +8,9 @@ body{
     flex-direction: column;
     min-height: 100vh;
 
-    background-image: url('../images/red-clouds.jpg');
+    background-image: url('../images/341.jpg');
     background-repeat: repeat;
-    background-size: contain;
+    background-size: cover;
     background-blend-mode: luminosity;
 }
 
@@ -35,8 +35,8 @@ header nav a{
 }
 
 footer{
-    border-top: 1px solid #cacabf;
-    color: #000000;
+    border-top: 1px solid #6d6d6d;
+    color: #1b0202;
     margin-top: 16px;
     margin-left: 5%;
     margin-right: 5%;
