--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -1,3 +1,5 @@
 <footer>
     <p>Created by {{author}}</p>
 </footer>
+<script type="text/javascript" src="/js/script.js"></script>
+<script type="text/javascript" src="/js/bootstrap.min.js"></script>
