--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,8 +1,8 @@
 <header class="justify-content-center">
     <h1>{{title}}</h1>
-    <nav class="justify-content-center nav nav-tabs col-sm-12">
-        <a href="/" class="nav-item nav-link">Weather</a>
-        <a href="/about" class="nav-item nav-link">About</a>
-        <a href="/help" class="nav-item nav-link">Help</a>
+    <nav class="justify-content-center nav nav-pills col-sm-12">
+        <a href="/" class="nav-item nav-link" onclick="activeLink(this)">Weather</a>
+        <a href="/about" class="nav-item nav-link" onclick="activeLink(this)">About</a>
+        <a href="/help" class="nav-item nav-link" onclick="activeLink(this)">Help</a>
     </nav>
 </header>
