--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -17,7 +17,7 @@
                 {{>header}}
                 <p>{{content}}</p>
                 <p class="text-secondary">It uses data from <em>mapbox.com</em> and <em>weatherstack.com</em></p>
-                <img src="/images/me.jpg" alt="" class="img-fluid rounded mx-auto d-block" style="max-width: 70%; height: 70vh;">
+                <img src="/images/me.jpg" alt="" class="img-fluid rounded mx-auto d-block" style="max-width: 70%; height: auto;">
             </div>
         </div>
     </div>
