--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,6 +1,7 @@
-<header class="justify-content-center">
+<header class="">
+    <h4 class="d-flex justify-content-center text-info" id="site-name">JulesWeather<i class="fas fa-cloud-sun"></i></h3>
     <h1>{{title}}</h1>
-    <nav class="justify-content-center nav nav-pills col-sm-12">
+    <nav class="justify-content-center nav nav-pills col-lg-12">
         <a href="/" class="nav-item nav-link" onclick="activeLink(this)">Weather</a>
         <a href="/about" class="nav-item nav-link" onclick="activeLink(this)">About</a>
         <a href="/help" class="nav-item nav-link" onclick="activeLink(this)">Help</a>
