--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/card.css">
-    <link rel="icon" href="/images/weather.png">
+    <link rel="icon" href="/images/cloudy.png">
+    <script src="https://kit.fontawesome.com/53498fc2f7.js" crossorigin="anonymous"></script>
     <title>Weather</title>
 </head>
 <body>
